[gd_scene load_steps=4 format=3 uid="uid://basw678sew3rr"]

[ext_resource type="Script" uid="uid://dh1w5l3edwiw3" path="res://entity.gd" id="1_6e8rh"]
[ext_resource type="PackedScene" uid="uid://coekptro8mxyx" path="res://LandParticles.tscn" id="2_ctcih"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gv5m4"]

[node name="Entity" type="CharacterBody3D"]
script = ExtResource("1_6e8rh")
land_particles_tscn = ExtResource("2_ctcih")

[node name="Hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gv5m4")

[node name="StrafeTimer" type="Timer" parent="."]

[node name="RayCast3D" type="RayCast3D" parent="."]

[node name="LagTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitRotateTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="StrafeTimer" to="." method="_on_strafe_timer_timeout"]
[connection signal="timeout" from="LagTimer" to="." method="_on_lag_timer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
[connection signal="timeout" from="SprintTimer" to="." method="_on_sprint_timer_timeout"]
